fixing jumping scrollbar from map by setting overflox-y to be scroll in html body

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,10 +5,11 @@
   text-align: center;
   position: relative;
   min-height: 100vh;
-
   /* width:100%; */
   /* padding-bottom:60px; */
-
+}
+body {
+  overflow-y: scroll; /* fix for jumping scrollbar with maps */
 }
 
 /* Setting the height for the hydrant logo
